done my application page

--- a/pages/list-job.html
+++ b/pages/list-job.html
@@ -352,7 +352,7 @@
             <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
                 <div class="introduce col-md-4 mt-3 pb-5">
                     <div class="logo w-50 p-2 m-auto m-md-0">
-                        <img class="w-100" src="../assets/image/The Wall.png" alt="">
+                        <img class="w-100" src="../assets/image/main-logo.png" alt="">
                     </div>
                     <p class="fs-14">
                         The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
