--- a/pages/my-application.html
+++ b/pages/my-application.html
@@ -75,5 +75,217 @@
             </div>
         </div>
     </header>
+    <div id="content">
+        <div class="container">
+            <h1 class="font-NotoSans-Bold fs-3 text-center">ĐƠN ỨNG TUYỂN CỦA TÔI</h1>
+            <div class="button-nav text-center py-4">
+                <button id="btn-submitted" class="btn border font-NotoSans-Bold mb-md-0 mb-2">Đơn đã nộp</button>
+                <button id="btn-accepted" class="bg-btn  btn font-NotoSans-Bold">Đơn được chấp nhận</button>
+            </div>
+            <div class="application-submitted border  p-lg-5 p-md-3 mx-sm-5 mx-sm-3 p-0 mx-2">
+                <div class="row row-cols-lg-2">
+                    <div class="list-job-card p-4 ">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="list-job-card p-4">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="list-job-card p-4 ">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                </div>
+            </div>
+            <div class="application-accepted border p-lg-5 p-md-3 mx-sm-5 mx-sm-3 p-0 mx-2">
+                <div class=" row row-cols-lg-2">
+                    <div class="list-job-card p-4 ">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="list-job-card p-4">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="list-job-card p-4 ">
+                        <div class="p-4 card">
+                            <div class="title-card d-flex">
+                                <div class="img-company">
+                                    <img class="w-100" src="../assets/image/fpt-software-tuyen.png" alt="">
+                                </div>
+                                <div class="title-post ms-3 col-8">
+                                    <p class="fs-6 text-roboto-m m-0">Sortware-engineer</p>                                 
+                                    <p class="fs-14 color-name text-worksans-re m-0">FPT Software</p>
+                                </div>
+                                <div class="save-job">
+                                    <i class="far fa-bookmark icon-save" id="icon-2"></i>
+                                </div>
+                            </div>
+                            <div class="content-post p-3 text-worksans-l fs-14">
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/location.png" alt="">Thành phố Hồ Chí Minh</p>
+                                <p class=" mb-1"><img class="me-2" src="../assets/image/dollar.png" alt="">USD 1.000 - 2.000</p>
+                            </div>
+                            <div class="time-post px-3 text-worksans-l">
+                                <p><img class="me-2" src="../assets/image/clock.png" alt="">Được đăng cách đây 1 năm</p>
+                            </div>
+                            <div class="quantity-apply p-3">
+                                <p><img class="me-2" src="../assets/image/user.png" alt="">10 người đã ứng tuyển</p>
+                            </div>
+                        </div>   
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="bg-web mt-5">
+        <div class="container">
+            <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
+                <div class="introduce col-md-4 mt-3 pb-5">
+                    <div class="logo w-50 p-2 m-auto m-md-0">
+                        <img class="w-100" src="../assets/image/main-logo.png" alt="">
+                    </div>
+                    <p class="fs-14">
+                        The Wall là nền tảng tuyển dụng và phát triển sự nghiệp hàng đầu Châu Á dành cho các tài năng trẻ. Sứ mệnh của The Wall là giúp người trẻ khám phá và theo đuổi đam mê nghề nghiệp.
+                    </p>
+                    <div class="social-icon pt-4 d-flex justify-content-md-start justify-content-center">
+                        <img class="col-2" src="../assets/image/facebook.png" alt="">
+                        <img class="mx-5 col-2" src="../assets/image/linkedin-sign.png" alt="">
+                        <img class="col-2" src="../assets/image/twitter-sign.png" alt="">
+                    </div>
+                </div>
+                <div class="contact col-md-4 pt-5">
+                    <h3 class="fs-4">LIÊN HỆ</h3>
+                    <p class="fs-14">
+                        <strong>Địa chỉ:</strong> Tầng 6, Số 100, Đường Nguyễn Thị Minh Khai, Phường 06, Quận 3, Thành phố Hồ Chí Minh, Việt Nam
+                    </p>
+                    <p class="fs-14"><strong>Email:</strong> sales-vn@glints.com</p>
+                    <p class="fs-14"><strong>Hotline:</strong> (028) 7100 3030</p>
+                </div>
+                <div class="site-linking col-md-3 py-5">
+                    <h3 class="fs-4">CÁC TRANG LIÊN KẾT</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="">Cơ hội việc làm</a></li>
+                        <li><a href="">Danh sách công ty</a></li>
+                        <li><a href="">Vị trí ứng tuyển</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/javascript/header.js"></script>
+    <script src="../assets/javascript/my-application.js"></script>
+    <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
