--- a/pages/my-application.html
+++ b/pages/my-application.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../assets/style/base.css">
     <link rel="stylesheet" href="../assets/style/typography.css">
     <link rel="stylesheet" href="../assets/style/footer.css">
+    <link href="../assets/vendor/fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body>
     <!------------HEADER------------------>
