fix error over width

--- a/pages/employer/manage-posts.html
+++ b/pages/employer/manage-posts.html
@@ -63,7 +63,7 @@
       <!-- ================ Main Content =============== -->
       <div id="main" class="mt-80">
             <h1 class="text-uppercase font-NotoSans-Bold text-center fs-4">Quản lý bài đăng của bạn</h1>
-            <div class="container-fluid px-0 mx-120 mt-40">
+            <div class="container px-0 mx-120 mt-40">
                   <div class="d-flex align-items-center">
                         <div class="search-box">
                               <input 
