--- a/pages/personal-profile.html
+++ b/pages/personal-profile.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </header>
-    <div id="content" class="">
+    <div id="content" class="d-none">
         <div class="container">
             <h1 class=" font-NotoSans-Bold text-center my-5">HỒ SƠ CỦA BẠN</h1>
             <div class="name row text-center text-sm-start">
@@ -138,8 +138,8 @@
                 <div class="update-profile col-md-8 col-12 ps-lg-5 ps-4 mt-4 mt-md-0">
                     <div class="inf-item pb-5">
                         <h3 class="fs-5 font-NotoSans-Bold pb-2 position-relative">THÔNG TIN CHUNG</h3>
-                        <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Hãy cho Nhà Tuyển dụng thấy thông tin của bạn</p>
-                        <div class="add-edit justify-content-center d-flex">
+                        <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Hãy cho Nhà Tuyển dụng biết bạn có thể đem lại giá trị gì</p>
+                        <div class="add-edit justify-content-center d-flex" id="add-edit-2">
                             <img class="me-2" src="../assets/image/plus.png" alt="">
                             <p class="font-NotoSans-Bold fs-14">THÊM MÔ TẢ BẢN THÂN</p>
                         </div>
@@ -199,15 +199,17 @@
     <!--kết thúc giao diện chính-->
     <!--Các bảng chỉnh sửa thông tin-->
     <!--bảng Thông tin cơ bản-->
-    <div class="frame-update-inf d-none card position-absolute">
+    <div class="frame-update-inf card position-absolute" id="frame-1">
         <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
             THÔNG TIN CƠ BẢN 
             <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
         </h3>
-        <div class="img-profile-edt overflow-hidden m-auto">
+        <div class="img-profile-edt overflow-hidden m-auto position-relative">
             <img class="w-100" src="../assets/image/profile.jpg" alt="">
+            <img class="edt-img-user position-absolute " src="../assets/image/draw.png" alt="">
+            <div class="position-absolute bg-opacity w-100 h-100"></div>
         </div>
-        <form action="." class="p-3">
+        <form action="." class="p-3 border-bottom">
             <fieldset class="mx-3 px-3 pb-2 my-3">
                 <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Họ và tên</legend>
                 <input class="border-0 font-NotoSans-Regular fs-6" type="text">
@@ -224,6 +226,74 @@
                 <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Địa chỉ</legend>
                 <input class="border-0 font-NotoSans-Regular fs-6" type="text">
             </fieldset>
+            <p class="px-3 fs-6 color-gray">Ngày sinh</p>
+            <div class="d-grid birthday">
+                <fieldset class="mx-3 px-3 pb-2 my-3">
+                    <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Ngày</legend>
+                    <select class="w-100 border-0" name="" id="day">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                    </select>
+                </fieldset>
+                <fieldset class="mx-3 px-3 pb-2 my-3">
+                    <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Tháng</legend>
+                    <select class="w-100 border-0" name="" id="month">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                        <option value="">3</option>
+                    </select>
+                </fieldset>
+                <fieldset class="mx-3 px-3 pb-2 my-3">
+                    <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Năm</legend>
+                    <select class="w-100 border-0" name="" id="year">
+                        <option value="">2001</option>
+                        <option value="">2002</option>
+                        <option value="">2003</option>
+                    </select>
+                </fieldset>
+            </div>
+            <p class="px-3 fs-6 color-gray">Giới tính</p>
+            <fieldset class="border-0 px-3 py-4 row row-cols-2">
+                <div class="">
+                    <input type="radio" name="gender" id="male"> 
+                    <label for="female" class="fs-6 ms-2">Nam</label>
+                </div>
+                <div class="">
+                    <input class="" type="radio" name="gender" id="female">
+                    <label class="fs-6 ms-2" for="female">Nữ</label>
+                </div>
+            </fieldset>
+            <div class="btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                <button type="submit" class="btn bg-btn px-3">LƯU</button>
+            </div>
+        </form>
+
+    </div>
+    <!--Bảng Thông tin chung-->
+    <div class="general-inf frame-update-inf bg-white position-absolute" id="frame-2">
+        <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
+            THÔNG TIN CHUNG
+            <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+        </h3>
+        <p class="font-WorkSans-Regular fs-14 mx-3">Giới thiệu về bản thân mình để Nhà tuyển dụng hiểu bạn hơn</p>
+        <form action="" class="px-3">
+            <textarea class="w-100 font-WorkSans-Regular my-3 p-2" placeholder="Thêm phần giới thiệu về bản thân bạn" name="" id="" cols="30" rows="5"></textarea>
+            <div class="btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                <button type="submit" class="btn bg-btn px-3">LƯU</button>
+            </div>
+        </form>
+    </div>
+    <!--Bảng Kinh nghiệm làm việc-->
+    <div class="general-inf frame-update-inf bg-white position-absolute d-block card" id="frame-3">
+        <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
+            KINH NGHIỆM LÀM VIỆC
+            <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+        </h3>
+        <form action="">
+            <input type="text" name="title" placeholder="Chức danh">
         </form>
     </div>
     <!--kết thúc phần bảng thông tin-->
@@ -264,7 +334,7 @@
     </footer>
     <script src="../assets/vendor/jquery/jquery-3.6.0.min.js"></script>
     <script src="../assets/javascript/header.js"></script>
-    <script src="../assets/javascript/my-application.js"></script>
     <script src="../assets/vendor/bootstrap-5.0.1-dist/js/bootstrap.min.js"></script>
+    <script src="../assets/javascript/personal-profile.js"></script>
 </body>
 </html>
