--- a/pages/personal-profile.html
+++ b/pages/personal-profile.html
@@ -91,7 +91,7 @@
             </div>
             <div class="information row px-lg-5 px-0 pt-lg-4 pt-0 mt-3">
                 <div class="col-md-4 col-12 ">
-                    <div class="basic-inf card p-lg-4 p-3">
+                    <div class="basic-inf card border-0 p-lg-4 p-3">
                         <h3 class="fs-6 font-NotoSans-Bold pb-2 position-relative">THÔNG TIN CƠ BẢN <img id="btn-edit" class="position-absolute" src="../assets/image/pencil.png" alt=""></h3>
                         <div class="list-inf d-flex justify-content-between py-2">
                             <div class="inf-title">
@@ -155,7 +155,7 @@
                     <div class="inf-item pb-5">
                         <h3 class="fs-5 font-NotoSans-Bold pb-2 position-relative">KỸ NĂNG CHUYÊN MÔN</h3>
                         <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Nêu ra các kỹ năng giúp ích cho vị trí ứng tuyển</p>
-                        <div class="add-edit justify-content-center d-flex" >
+                        <div class="add-edit justify-content-center d-flex" id="add-edit-5">
                             <img class="me-2" src="../assets/image/plus.png" alt="">
                             <p class="font-NotoSans-Bold fs-14">THÊM KỸ NĂNG CHUYÊN MÔN</p>
                         </div>
@@ -171,7 +171,7 @@
                     <div class="inf-item pb-5">
                         <h3 class="fs-5 font-NotoSans-Bold pb-2 position-relative">DỰ ÁN THAM GIA</h3>
                         <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Hãy cho nhà tuyển dụng thấy kinh nghiệm của bạn qua các dự án mà bạn đã từng tham gia</p>
-                        <div class="add-edit justify-content-center d-flex">
+                        <div class="add-edit justify-content-center d-flex"  id="add-edit-6">
                             <img class="me-2" src="../assets/image/plus.png" alt="">
                             <p class="font-NotoSans-Bold fs-14">THÊM DỰ ÁN THAM GIA</p>
                         </div>
@@ -179,7 +179,7 @@
                     <div class="inf-item pb-5">
                         <h3 class="fs-5 font-NotoSans-Bold pb-2 position-relative">HOẠT ĐỘNG XÃ HỘI</h3>
                         <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Các hoạt động xã hội giúp nhà tuyển dụng biết thêm về kỹ năng mềm của bạn</p>
-                        <div class="add-edit justify-content-center d-flex">
+                        <div class="add-edit justify-content-center d-flex" id="add-edit-7">
                             <img class="me-2" src="../assets/image/plus.png" alt="">
                             <p class="font-NotoSans-Bold fs-14">THÊM HOẠT ĐỘNG XÃ HỘI</p>
                         </div>
@@ -187,7 +187,7 @@
                     <div class="inf-item pb-5">
                         <h3 class="fs-5 font-NotoSans-Bold pb-2 position-relative">CÔNG VIỆC QUAN TÂM</h3>
                         <p class="text-center font-WorkSans-Regular fs-6 py-3 color-gray">Thêm những công việc mà bạn quan tâm giúp chúng tôi giới thiệu những công việc phù hợp cho bạn</p>
-                        <div class="add-edit justify-content-center d-flex">
+                        <div class="add-edit justify-content-center d-flex"  id="add-edit-8">
                             <img class="me-2" src="../assets/image/plus.png" alt="">
                             <p class="font-NotoSans-Bold fs-14">THÊM CÔNG VIỆC QUAN TÂM</p>
                         </div>
@@ -200,7 +200,7 @@
     <!--Các bảng chỉnh sửa thông tin-->
     <!--bảng Thông tin cơ bản-->
     <div class="frame" id="frame-1">
-        <div class="frame-update-inf card position-absolute">
+        <div class="frame-update-inf  position-absolute">
             <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
                 THÔNG TIN CƠ BẢN 
                 <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
@@ -291,7 +291,7 @@
     </div>
     <!--Bảng Kinh nghiệm làm việc-->
     <div class="frame" id="frame-3">
-        <div class="frame-update-inf bg-white card">
+        <div class="frame-update-inf bg-white">
             <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
                 KINH NGHIỆM LÀM VIỆC
                 <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
@@ -349,7 +349,7 @@
     </div>
     <!--Bảng Trình độ học vấn-->
     <div class="frame" id="frame-4">
-        <div class="frame-update-inf bg-white card">
+        <div class="frame-update-inf bg-white">
             <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
                 TRÌNH ĐỘ HỌC VẤN
                 <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
@@ -406,8 +406,194 @@
             </form>
         </div>
     </div>
+    <!--Bảng kỹ năng chuyên môn-->
+    <div class="frame" id="frame-5">
+        <div class="frame-update-inf bg-white">
+            <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
+                KỸ NĂNG CHUYÊN MÔN
+                <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+            </h3>
+            <p class="font-WorkSans-Regular fs-14 mx-3">Chọn tối đa 10 kỹ năng của bạn. Điều này giúp nhà tuyển dụng hiểu rõ hơn về độ phù hợp của bạn với công việc. </p>
+            <form action="" class="p-3 border-bottom">
+                <input class="w-100  p-2 mb-3" type="search" name="" id="" placeholder="Tìm kiếm kỹ năng của bạn">
+                <div class="check-box-skill row row-cols-2 px-5 py-3 font-NotoSans-Regular fs-14">
+                    <div class="">
+                        <div class="py-2">
+                            <input type="checkbox" name="marketing" id="">
+                            <label for="marketing">Marketing</label>
+                        </div>
+                        <div class="py-2">
+                            <input type="checkbox" name="communication" id="">
+                            <label for="communication">Communications</label>
+                        </div>
+                        <div class="py-2">
+                            <input type="checkbox" name="copywriting" id="">
+                            <label for="copywriting">Copywriting</label>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div class="py-2">
+                            <input type="checkbox" name="photography" id="">
+                            <label for="photography">Photography</label>
+                        </div>
+                        <div class="py-2">
+                            <input type="checkbox" name="php" id="">
+                            <label for="php">PHP</label>
+                        </div>
+                        <div class="py-2">
+                            <input type="checkbox" name="html-css" id="">
+                            <label for="html-css">HTML and CSS</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-choosen py-3 border-top">
+                    <p class="color-gray-light px-5 ">Bạn chưa chọn kỹ năng nào</p>
+                    <!--những skill đã chọn-->
+                    <div class="d-none skills d-flex flex-wrap">
+                        <span class="skill-item px-3 py-1">HTML</span>
+                    </div>
+                </div>
+                <div class="mt-4 btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                    <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                    <button type="submit" class="btn bg-btn px-3">LƯU</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--Dự án tham gia-->
+    <div class="frame" id="frame-6">
+        <div class="frame-update-inf bg-white ">
+            <h3 class="fs-5 font-NotoSans-Bold border-bottom p-3 mt-3 position-relative">
+                DỰ ÁN THAM GIA
+                <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+            </h3>
+            <form action="" class="p-3 border-bottom">
+                <p class="font-WorkSans-Regular fs-14 pb-2">Mô tả dự án</p>
+                <input class="w-100  p-2 mb-3" type="text" name="description-project" id="">
+                <p class="font-WorkSans-Regular fs-14 py-2">Link dự án</p>
+                <input class="w-100  p-2 mb-3" type="text" name="description-project" id="">
+                <textarea name="" id="" class="w-100 p-2" cols="30" rows="6" placeholder="Thông tin bổ sung"></textarea>
+                <div class="mt-4 btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                    <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                    <button type="submit" class="btn bg-btn px-3">LƯU</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--Bảng Hoạt động xã hội-->
+    <div class="frame" id="frame-7">
+        <div class="frame-update-inf  bg-white ">
+            <h3 class="fs-5 font-NotoSans-Bold border-bottom pb-2 ps-4 pt-3 mt-3 position-relative">
+                HOẠT ĐỘNG XÃ HỘI
+                <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+            </h3>
+            <form action="" class="p-4 border-bottom">
+                <input class="w-100 height-45 p-2 mb-3" type="text" name="name-activity" id="" placeholder="Tên hoạt động">
+                <input class="w-100 height-45 p-2 mb-3" type="text" name="job-role" id="" placeholder="Vai trò công việc">
+                <p class="fs-6 ">Ngày bắt đầu</p>
+                <div class="day-start px-12 gap-2 row d-grid">
+                    <fieldset class="px-3 pb-2 my-3">
+                        <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Tháng</legend>
+                        <select class="w-100 border-0" name="" id="month">
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                        </select>
+                    </fieldset>
+                    <fieldset class="px-3 pb-2 my-3">
+                        <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Năm</legend>
+                        <select class="w-100 border-0" name="" id="year">
+                            <option value="">2001</option>
+                            <option value="">2002</option>
+                            <option value="">2003</option>
+                        </select>
+                    </fieldset>
+                </div>
+                <p class="fs-6 ">Ngày kết thúc</p>
+                <div class="day-start px-12 gap-2 row d-grid">
+                    <fieldset class="px-3 pb-2 my-3">
+                        <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Tháng</legend>
+                        <select class="w-100 border-0" name="" id="month">
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                        </select>
+                    </fieldset>
+                    <fieldset class="px-3 pb-2 my-3">
+                        <legend class="fs-14 float-none w-auto px-2 font-NotoSans-Regular color-gray">Năm</legend>
+                        <select class="w-100 border-0" name="" id="year">
+                            <option value="">2001</option>
+                            <option value="">2002</option>
+                            <option value="">2003</option>
+                        </select>
+                    </fieldset>
+                </div>
+                <div class="mt-3 pb-4">
+                    <input class="ms-1" type="checkbox" name="attending" id=""> 
+                    <label for="attending">Tôi hiện đang tham gia hoạt động tại đây</label>
+                </div>
+                <div class="mt-4 btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                    <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                    <button type="submit" class="btn bg-btn px-3">LƯU</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!--Bảng Công việc quan tâm-->
+    <div class="frame" id="frame-8">
+        <div class="frame-update-inf bg-white ">
+            <h3 class="fs-5 font-NotoSans-Bold border-bottom pb-2 ps-4 pt-3 mt-3 position-relative">
+                CÔNG VIỆC QUAN TÂM
+                <img class="i-close position-absolute" src="../assets/image/cancel.png" alt="">
+            </h3>
+            <p class="font-WorkSans-Regular fs-14 mx-2 px-12">Thêm những công việc mà bạn quan tâm giúp chúng tôi giới thiệu những công việc phù hợp cho bạn</p>
+            <form action="" class="p-4 border-bottom">
+                <p class="font-NotoSans-Bold fs-14 pb-2">Việc làm mong muốn</p>
+                <select class="select-job w-100 border font-NotoSans-Regular height-45 p-2 mb-4" name="job" id="">
+                    <option selected="selected" value="">---Việc làm---</option>
+                    <option value="">Front-end</option>
+                    <option value="">Back-end</option>
+                    <option value="">Marketing</option>
+                </select>
+                <p class="font-NotoSans-Bold fs-14 pb-2">Hình thức làm việc</p>
+                <div class="fs-16" >
+                    <input type="checkbox" name="intern" id="" class="me-1">
+                    <label for="intern">Internship</label>
+                </div>
+                <div class="fs-16">
+                    <input type="checkbox" name="full-time" id="" class="me-1">
+                    <label for="full-time">Full-time</label>
+                </div>
+                <div class="fs-16">
+                    <input type="checkbox" name="part-time" id="" class="me-1">
+                    <label for="part-time">Part-time</label>
+                </div>
+                <div class="fs-16">
+                    <input type="checkbox" name="freelance" id="" class="me-1">
+                    <label for="freelance">Freelance</label>
+                </div>
+                <p class="font-NotoSans-Bold fs-14 py-3">Mức lương mong muốn</p>
+                <div class="row justify-content-between mx-1">
+                    <input class="w-75 height-45 p-2 mb-3" type="text" name="salary" id="">
+                    <button class="vnd height-45 px-4 py-2 mb-3 border-0 font-NotoSans-Bold">VND</button>
+                </div>
+                <p class="font-NotoSans-Bold fs-14 py-3">Địa điểm làm việc mong muốn</p>
+                <select name="location" id=""  class="select-job w-100 border font-NotoSans-Regular height-45 p-2 mb-4">
+                    <option selected="selected" value="">Thành phố</option>
+                    <option value="">Hồ Chí Minh</option>
+                    <option value="">Cần Thơ</option>
+                    <option value="">Đà Nẵng</option>
+                    <option value="">Hà Nội</option>
+                </select>
+                <div class="mt-4 btn-form font-NotoSans-Bold text-end pe-4 border-top py-3 fs-14">
+                    <button class="btn-cancel btn border px-3 me-3">HỦY</button>
+                    <button type="submit" class="btn bg-btn px-3">LƯU</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <!--kết thúc phần bảng thông tin-->
-    <footer class="bg-web mt-5 d-none">
+    <footer class="bg-web mt-5">
         <div class="container">
             <div class="row d-flex justify-content-between text-white text-noto-re text-md-start text-center">
                 <div class="introduce col-md-4 mt-3 pb-5">
