--- a/pages/introduction-company.html
+++ b/pages/introduction-company.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="btn-apply text-end">
-                        <button class="bg-btn font-NotoSans-Bold border-0 px-4 py-1">ỨNG TUYỂN</button>
+                        <a href="#list-post" class="text-decoration-none text-dark"><button class="bg-btn font-NotoSans-Bold border-0 px-4 py-1">ỨNG TUYỂN</button></a> 
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
                 <h4 class="font-NotoSans-Bold fs-6 border-bottom py-2">Mô tả</h4>
                 <p class="font-WorkSans-Regular">The brand with the three-pointed star is known for its pioneering role in the automotive industry and many integrated safety technology innovations within its cars. </p>
             </div>
-            <div class="company-list-job card-shadow row my-4 p-lg-5 p-4">
+            <div id="list-post" class="company-list-job card-shadow row my-4 p-lg-5 p-4">
                 <h3 class="font-NotoSans-Bold fs-5 border-bottom pb-3">VIỆC LÀM</h3>
                 <div class="job-item py-3 border-bottom">
                     <h4 class="color-blue name-job fs-5">Manager, Communications</h4>
